--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,14 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:latest
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    image: postgres:15
+    restart: always
+    env_file:
+      - .env
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - postgres_data:/var/lib/postgresql/data  
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      test: ["CMD-SHELL", "pg_isready -U shopdb"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -19,12 +18,12 @@ services:
 
   web:
     build: .
+    restart: always  
     ports:
       - "8000:8000"
     env_file:
       - .env
     volumes:
-      - .:/app
       - static:/app/static
       - media:/app/media
     depends_on:
@@ -36,6 +35,7 @@ services:
 
   nginx:
     image: nginx:latest
+    restart: always  
     ports:
       - "80:80"
       - "443:443"
